--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,18 @@
 
 <head>
     <title>Formual One</title>
-
+    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 </head>
 
 <body>
 
+    <img id="logo" src="Logo.png"/>
 
+    <h2>What is Formual One?</h2>
+    <p>Formula One is the highest class of international racing for open-wheel single-seater 
+    formula racing cars sanctioned by the Fédération 
+    Internationale de l'Automobile. The FIA Formula One World Championship has been one of the 
+    premier forms of racing around the world since its inaugural season in 1950.</p>
 </body>
 
 </html>
