changed the background of the website and took away the images for now. Also created my navigation bar that directs you to the homepage and yet to be made teams pages and something else which i havent decided.

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,14 @@
     <br>
     </br>
 
+    <h1>HomePage</h1>
+    <nav>
+        <ul>
+            <li><a href="" id="link-1"><h2>Homepage</h2></a></li>
+            <li><a href="" id="link-2"><h2>All Teams</h2></a></li>
+            <li><a href="" id="link-3"><h2>Something</h2></a></li>	
+        </ul>
+    </nav>
     <h2>What is Formual One?</h2>
     
     <p>Formula One is the highest class of international racing for open-wheel single-seater 
@@ -21,7 +29,8 @@
 
     <br>
 
-    <img id ="driving" src="driving.jpg"/>
+    <!-- <img id ="left-image" src="driving.jpg"/>
+    <img id="right-image" src="formula-1.jpg"/> -->
 
 </body>
 
