Begun work on the all teams page, copying most of the aesthics of the index page and added the links that will direct you to the different team pages

--- a/allTeams.html
+++ b/allTeams.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Formual One - HomePage</title>
+    <title>Formual One - AllTeams</title>
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 </head>
 
@@ -20,12 +20,18 @@
             <li><a href="" id="link-3"><h2>Something</h2></a></li>	
         </ul>
     </nav>
-    <h2>What is Formual One?</h2>
+    <h2>All Teams</h2>
     
-    <p>Formula One is the highest class of international racing for open-wheel single-seater 
-    formula racing cars sanctioned by the Fédération 
-    Internationale de l'Automobile. The FIA Formula One World Championship has been one of the 
-    premier forms of racing around the world since its inaugural season in 1950.</p>
+ <a href="">Mercedes</a><br></br>
+ <a href="">RedBull</a><br></br>
+ <a href="">Ferrari</a><br></br>
+ <a href="">Mclaren</a><br></br>
+ <a href="">Aston Martin</a><br></br>
+ <a href="">Alpine</a><br></br>
+ <a href="">Alpha Tauri</a><br></br>
+ <a href="">Haas</a><br></br>
+ <a href="">Alfa Romeo</a><br></br>
+ <a href="">Williams</a>
 
     <br>
 
