--- a/Index.html
+++ b/Index.html
@@ -20,17 +20,20 @@
             <li><a href="" id="link-3"><h2>Something</h2></a></li>	
         </ul>
     </nav>
+
+    <img id ="left-image" src="driving.jpg"/>
+    <img id="right-image" src="formula-1.jpg"/>
+
+    <br></br>
     <h2>What is Formual One?</h2>
-    
+
     <p>Formula One is the highest class of international racing for open-wheel single-seater 
     formula racing cars sanctioned by the Fédération 
     Internationale de l'Automobile. The FIA Formula One World Championship has been one of the 
     premier forms of racing around the world since its inaugural season in 1950.</p>
 
-    <br>
+    <br></br>
 
-    <!-- <img id ="left-image" src="driving.jpg"/>
-    <img id="right-image" src="formula-1.jpg"/> -->
 
 </body>
 
