added the images back to the all teams page

--- a/allTeams.html
+++ b/allTeams.html
@@ -20,7 +20,13 @@
             <li><a href="" id="link-3"><h2>Something</h2></a></li>	
         </ul>
     </nav>
+
+    <img id ="left-image" src="driving.jpg"/>
+    <img id="right-image" src="formula-1.jpg"/>
+
     <h2>All Teams</h2>
+
+    <br></br>
     
  <a href="">Mercedes</a><br></br>
  <a href="">RedBull</a><br></br>
@@ -32,11 +38,6 @@
  <a href="">Haas</a><br></br>
  <a href="">Alfa Romeo</a><br></br>
  <a href="">Williams</a>
-
-    <br>
-
-    <!-- <img id ="left-image" src="driving.jpg"/>
-    <img id="right-image" src="formula-1.jpg"/> -->
 
 </body>
 
