--- a/allTeams.html
+++ b/allTeams.html
@@ -28,7 +28,7 @@
 
     <br></br>
     
- <a href="">Mercedes</a><br></br>
+ <a href="Mercedes.html">Mercedes</a><br></br>
  <a href="">RedBull</a><br></br>
  <a href="">Ferrari</a><br></br>
  <a href="">Mclaren</a><br></br>
