added content to the mercedes team page which should be the universal layout for all other teamp pages

--- a/Mercedes.html
+++ b/Mercedes.html
@@ -25,17 +25,19 @@
     
     <br></br>
     
-    <p id="text1">Mercedes’ modern F1 revival started with the creation of a works squad for 2010 <br>
+    <p>Mercedes’ modern F1 revival started with the creation of a works squad for 2010 <br>
      - the platform for a meteoric rise up the Grand Prix order. <br>
     The team generated huge<br>
     excitement from the off with the sensational return <br>
     of Michael Schumacher, but<br>
     headlines soon followed on track: three podiums in their debut season, <br>
-    all via Nico Rosberg - who then claimed a breakthrough pole/victory double at China in 2012.<br>
+    all via Nico Rosberg - who then claimed a breakthrough pole/victory <br>
+    double at China in 2012.
     </p>
 
     <img id="team-logo" src="mercedes.png"/>
 
+</section>
 </body>
 
 </html>
