added the ferrari page

--- a/allTeams.html
+++ b/allTeams.html
@@ -30,7 +30,7 @@
     
  <a href="Mercedes.html">Mercedes</a><br></br>
  <a href="">RedBull</a><br></br>
- <a href="">Ferrari</a><br></br>
+ <a href="Ferrari.html">Ferrari</a><br></br>
  <a href="">Mclaren</a><br></br>
  <a href="">Aston Martin</a><br></br>
  <a href="">Alpine</a><br></br>
