added the redbull teams page to the site

--- a/Ferrari.html
+++ b/Ferrari.html
@@ -10,7 +10,7 @@
 	<ul>
         <li><a href="index.html" id="link-1"><h2>Homepage</h2></a></li>
         <li><a href="allTeams.html" id="link-2"><h2>All Teams</h2></a></li>
-		<li><a href="" id="link-3"><h2>Sign Out</h2></a></li>			
+		<li><a href="" id="link-3"><h2>Something</h2></a></li>			
 	</ul>
 </nav>
 	
