--- a/allTeams.html
+++ b/allTeams.html
@@ -29,7 +29,7 @@
     <br></br>
     
  <a href="Mercedes.html">Mercedes</a><br></br>
- <a href="">RedBull</a><br></br>
+ <a href="RedBull.html">RedBull</a><br></br>
  <a href="Ferrari.html">Ferrari</a><br></br>
  <a href="">Mclaren</a><br></br>
  <a href="">Aston Martin</a><br></br>
